tests/snapshots/run_wpt_conformance__trtx_tan_float32_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "tan.https.any.js",
    "tan float32 5D tensor",
    "trtx",
    "PASS",
)
